<resources>
    <string name="app_name">BeaconWatcher</string>

    <string name="broadcast_device">Broadcast Device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="ble_adv_not_supported">BLE pheripheral is not supported on this device.</string>
    <string name="ble_initialized">BLE has been initialized.</string>
    <string name="ble_stop_adv">BLE advertisement stopped.</string>
    <string name="ble_start_adv">BLE advertisement started.</string>
    <string name="stop_gatt_server">GATT server stopped.</string>
    <string name="needs_coarse">Monitor Needs coarse permission</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_permissions">Permissions: </string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="txt_permissions">0</string>

    <string name="txt_connect">Connect</string>
    <string name="txt_disconnect">Disconnect</string>

    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="btn_simulate">Simulate</string>
    <string name="btn_advertise">Advertise</string>
    <string name="txt_start">start</string>
    <string name="txt_stop">stop</string>
    <string name="txt_filter">Only MuTag</string>
    <string name="tv_major">Major: %d</string>
    <string name="tv_minor">Minor: %d</string>
    <string name="tv_rssi">rssi: %d</string>
    <string name="tv_txpower">Tx: %d</string>
    <string name="btn_alt_advertise">Beacon</string>

</resources>
