<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/llControls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvDeviceAddressLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />

            <ToggleButton
                android:id="@+id/toggleConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/txt_connect"
                android:textOn="@string/txt_disconnect" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDeviceAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/label_device_address"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvStateLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvDeviceAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llControls" />

        <TextView
            android:id="@+id/tvDeviceAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDeviceAddressLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDeviceAddressLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDeviceAddressLabel" />


        <TextView
            android:id="@+id/tvStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_state"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPermissionLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvConnectionState"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceAddressLabel" />

        <TextView
            android:id="@+id/tvConnectionState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/disconnected"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvStateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvStateLabel"
            app:layout_constraintTop_toTopOf="@+id/tvStateLabel" />

        <TextView
            android:id="@+id/tvPermissionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_permissions"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDataLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvPermission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStateLabel" />

        <TextView
            android:id="@+id/tvPermission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_permissions"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPermissionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPermissionLabel"
            app:layout_constraintTop_toTopOf="@+id/tvPermissionLabel" />

        <TextView
            android:id="@+id/tvDataLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/label_data"
            android:minLines="2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/gattServicesList"
            app:layout_constraintEnd_toStartOf="@+id/tvData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionLabel" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/no_data"
            android:minLines="2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDataLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDataLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDataLabel" />

        <ExpandableListView
            android:id="@+id/gattServicesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDataLabel"/>

    </android.support.constraint.ConstraintLayout>
</layout>
